# decodebitcoin.com

./: .gitignore  Cargo.toml  README.md  index.css  index.html  index.js  package-lock.json  package.json  shell.nix  webpack.config.js  xor.html  xor.js
src/: bip32.rs  lib.rs  main.rs  transaction.rs  wasm.rs
src-web/: index.html  index.js  xor.html  xor.js
src-web/css/: index.css
