[package]
authors = ["yo@karliatto.com"]
edition = "2021"
name = "decodebitcoin-dot-com"
publish = false
version = "0.0.1"

[lib]
path = "src/wasm.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window'] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.132"
sha2 = "0.10.8"

[[bin]]
name = "decodebitcoin-wasm"
path = "src/wasm.rs"

[[bin]]
name = "decodebitcoin-cli"
path = "src/main.rs"