[package]
authors = ["yo@karliatto.com"]
edition = "2021"
name = "decodebitcoin-dot-com"
publish = false
version = "0.0.1"

[lib]
path = "src/wasm.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window'] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.132"
sha2 = "0.10.8"
num-bigint = "0.4.6"
num-traits = "0.2.19"
hmac = "0.12.1"
secp256k1 = { version = "0.30.0", features = ["hashes"] }
ripemd = "0.1.3"

[[bin]]
name = "decodebitcoin-wasm"
path = "src/wasm.rs"

[[bin]]
name = "decodebitcoin-cli"
path = "src/main.rs"
